--- a/02-cian-downloader.ipynb
+++ b/02-cian-downloader.ipynb
@@ -182,137 +182,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2024-07-08 14:00:30 | open virtual browser\n"
+      "[INFO    ] 2024-07-16 12:54:23 | open virtual browser\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'https://sevastopol.cian.ru/kupit-dom/'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[INFO    ] 2024-07-08 14:00:37 | page 1: 28 items\n",
-      "[INFO    ] 2024-07-08 14:00:46 | page 2: 28 items\n",
-      "[INFO    ] 2024-07-08 14:00:54 | page 3: 28 items\n",
-      "[INFO    ] 2024-07-08 14:01:02 | page 4: 28 items\n",
-      "[INFO    ] 2024-07-08 14:01:09 | page 5: 28 items\n",
-      "[INFO    ] 2024-07-08 14:01:18 | page 6: 28 items\n",
-      "[INFO    ] 2024-07-08 14:01:26 | page 7: 28 items\n",
-      "[INFO    ] 2024-07-08 14:01:31 | page 8: 28 items\n",
-      "[INFO    ] 2024-07-08 14:01:35 | page 9: 28 items\n",
-      "[INFO    ] 2024-07-08 14:01:40 | page 10: 28 items\n",
-      "[INFO    ] 2024-07-08 14:01:50 | page 11: 28 items\n",
-      "[INFO    ] 2024-07-08 14:01:59 | page 12: 28 items\n",
-      "[INFO    ] 2024-07-08 14:02:07 | page 13: 28 items\n",
-      "[INFO    ] 2024-07-08 14:02:14 | page 14: 28 items\n",
-      "[INFO    ] 2024-07-08 14:02:19 | page 15: 25 items\n",
-      "[INFO    ] 2024-07-08 14:02:28 | page 16: 28 items\n",
-      "[INFO    ] 2024-07-08 14:02:31 | page 17: 28 items\n",
-      "[INFO    ] 2024-07-08 14:02:35 | page 18: 28 items\n",
-      "[INFO    ] 2024-07-08 14:02:39 | page 19: 28 items\n",
-      "[INFO    ] 2024-07-08 14:02:42 | page 20: 28 items\n",
-      "[INFO    ] 2024-07-08 14:02:46 | page 21: 27 items\n",
-      "[INFO    ] 2024-07-08 14:02:50 | page 22: 28 items\n",
-      "[INFO    ] 2024-07-08 14:02:55 | page 23: 28 items\n",
-      "[INFO    ] 2024-07-08 14:03:01 | page 24: 28 items\n",
-      "[INFO    ] 2024-07-08 14:03:05 | page 25: 28 items\n",
-      "[INFO    ] 2024-07-08 14:03:11 | page 26: 28 items\n",
-      "[INFO    ] 2024-07-08 14:03:15 | page 27: 28 items\n",
-      "[INFO    ] 2024-07-08 14:03:21 | page 28: 28 items\n",
-      "[INFO    ] 2024-07-08 14:03:25 | page 29: 28 items\n",
-      "[INFO    ] 2024-07-08 14:03:29 | page 30: 28 items\n",
-      "[INFO    ] 2024-07-08 14:03:34 | page 31: 27 items\n",
-      "[INFO    ] 2024-07-08 14:03:38 | page 32: 28 items\n",
-      "[INFO    ] 2024-07-08 14:03:44 | page 33: 28 items\n",
-      "[INFO    ] 2024-07-08 14:03:51 | page 34: 28 items\n",
-      "[INFO    ] 2024-07-08 14:03:57 | page 35: 28 items\n",
-      "[INFO    ] 2024-07-08 14:04:03 | page 36: 28 items\n",
-      "[INFO    ] 2024-07-08 14:04:06 | page 37: 28 items\n",
-      "[INFO    ] 2024-07-08 14:04:10 | page 38: 28 items\n",
-      "[INFO    ] 2024-07-08 14:04:17 | page 39: 28 items\n",
-      "[INFO    ] 2024-07-08 14:04:21 | page 40: 28 items\n",
-      "[INFO    ] 2024-07-08 14:04:27 | page 41: 27 items\n",
-      "[INFO    ] 2024-07-08 14:04:31 | page 42: 28 items\n",
-      "[INFO    ] 2024-07-08 14:04:35 | page 43: 28 items\n",
-      "[INFO    ] 2024-07-08 14:04:39 | page 44: 27 items\n",
-      "[INFO    ] 2024-07-08 14:04:43 | page 45: 25 items\n",
-      "[INFO    ] 2024-07-08 14:04:47 | page 46: 28 items\n",
-      "[INFO    ] 2024-07-08 14:04:51 | page 47: 27 items\n",
-      "[INFO    ] 2024-07-08 14:04:55 | page 48: 28 items\n",
-      "[INFO    ] 2024-07-08 14:04:59 | page 49: 28 items\n",
-      "[INFO    ] 2024-07-08 14:05:05 | page 50: 28 items\n",
-      "[INFO    ] 2024-07-08 14:05:09 | page 51: 28 items\n",
-      "[INFO    ] 2024-07-08 14:05:15 | page 52: 28 items\n",
-      "[INFO    ] 2024-07-08 14:05:21 | page 53: 28 items\n",
-      "[INFO    ] 2024-07-08 14:05:28 | page 54: 25 items\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1498"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'data/2024/raw/house/cian/cian_2024-07-08_14-05_raw_sevastopol.pkl'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'https://krym.cian.ru/kupit-kvartiru-krym-sudak/'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[INFO    ] 2024-07-08 14:05:36 | page 1: 28 items\n",
-      "[INFO    ] 2024-07-08 14:05:44 | page 2: 28 items\n",
-      "[INFO    ] 2024-07-08 14:05:51 | page 3: 28 items\n",
-      "[INFO    ] 2024-07-08 14:05:58 | page 4: 28 items\n",
-      "[INFO    ] 2024-07-08 14:06:05 | page 5: 28 items\n",
-      "[INFO    ] 2024-07-08 14:06:09 | page 6: 28 items\n",
-      "[INFO    ] 2024-07-08 14:06:13 | page 7: 28 items\n",
-      "[INFO    ] 2024-07-08 14:06:18 | page 8: 28 items\n",
-      "[INFO    ] 2024-07-08 14:06:22 | page 9: 24 items\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "248"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'data/2024/raw/flat/cian/cian_2024-07-08_14-06_raw_sudak.pkl'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     },
     {
      "data": {
@@ -327,26 +198,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2024-07-08 14:06:28 | page 1: 28 items\n",
-      "[INFO    ] 2024-07-08 14:06:32 | page 2: 28 items\n",
-      "[INFO    ] 2024-07-08 14:06:38 | page 3: 28 items\n",
-      "[INFO    ] 2024-07-08 14:06:45 | page 4: 28 items\n",
-      "[INFO    ] 2024-07-08 14:06:52 | page 5: 28 items\n",
-      "[INFO    ] 2024-07-08 14:06:58 | page 6: 28 items\n",
-      "[INFO    ] 2024-07-08 14:07:05 | page 7: 28 items\n",
-      "[INFO    ] 2024-07-08 14:07:12 | page 8: 28 items\n",
-      "[INFO    ] 2024-07-08 14:07:18 | page 9: 28 items\n",
-      "[INFO    ] 2024-07-08 14:07:25 | page 10: 28 items\n",
-      "[INFO    ] 2024-07-08 14:07:31 | page 11: 28 items\n",
-      "[INFO    ] 2024-07-08 14:07:37 | page 12: 28 items\n",
-      "[INFO    ] 2024-07-08 14:07:43 | page 13: 28 items\n",
-      "[INFO    ] 2024-07-08 14:07:49 | page 14: 25 items\n"
+      "[INFO    ] 2024-07-16 12:54:29 | page 1: 28 items\n",
+      "[INFO    ] 2024-07-16 12:54:33 | page 2: 28 items\n",
+      "[INFO    ] 2024-07-16 12:54:37 | page 3: 28 items\n",
+      "[INFO    ] 2024-07-16 12:54:41 | page 4: 28 items\n",
+      "[INFO    ] 2024-07-16 12:54:45 | page 5: 28 items\n",
+      "[INFO    ] 2024-07-16 12:54:49 | page 6: 28 items\n",
+      "[INFO    ] 2024-07-16 12:54:50 | page 7: 0 items\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "389"
+       "168"
       ]
      },
      "metadata": {},
@@ -355,7 +219,7 @@
     {
      "data": {
       "text/plain": [
-       "'data/2024/raw/land/cian/cian_2024-07-08_14-07_raw_sudak.pkl'"
+       "'data/2024/raw/land/cian/cian_2024-07-16_12-54_raw_sudak.pkl'"
       ]
      },
      "metadata": {},
@@ -374,22 +238,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2024-07-08 14:07:57 | page 1: 28 items\n",
-      "[INFO    ] 2024-07-08 14:08:07 | page 2: 28 items\n",
-      "[INFO    ] 2024-07-08 14:08:16 | page 3: 28 items\n",
-      "[INFO    ] 2024-07-08 14:08:31 | page 4: 28 items\n",
-      "[INFO    ] 2024-07-08 14:08:39 | page 5: 28 items\n",
-      "[INFO    ] 2024-07-08 14:10:54 | page 6: 28 items\n",
-      "[INFO    ] 2024-07-08 14:10:58 | page 7: 28 items\n",
-      "[INFO    ] 2024-07-08 14:11:03 | page 8: 28 items\n",
-      "[INFO    ] 2024-07-08 14:11:19 | page 9: 28 items\n",
-      "[INFO    ] 2024-07-08 14:11:36 | page 10: 26 items\n"
+      "[INFO    ] 2024-07-16 12:54:55 | page 1: 28 items\n",
+      "[INFO    ] 2024-07-16 12:54:59 | page 2: 28 items\n",
+      "[INFO    ] 2024-07-16 12:55:03 | page 3: 28 items\n",
+      "[INFO    ] 2024-07-16 12:55:09 | page 4: 28 items\n",
+      "[INFO    ] 2024-07-16 12:55:15 | page 5: 28 items\n",
+      "[INFO    ] 2024-07-16 12:55:21 | page 6: 28 items\n",
+      "[INFO    ] 2024-07-16 12:55:25 | page 7: 28 items\n",
+      "[INFO    ] 2024-07-16 12:55:29 | page 8: 28 items\n",
+      "[INFO    ] 2024-07-16 12:55:34 | page 9: 28 items\n",
+      "[INFO    ] 2024-07-16 12:55:38 | page 10: 28 items\n",
+      "[INFO    ] 2024-07-16 12:55:43 | page 11: 25 items\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "278"
+       "305"
       ]
      },
      "metadata": {},
@@ -398,7 +263,7 @@
     {
      "data": {
       "text/plain": [
-       "'data/2024/raw/house/cian/cian_2024-07-08_14-11_raw_sudak.pkl'"
+       "'data/2024/raw/house/cian/cian_2024-07-16_12-55_raw_sudak.pkl'"
       ]
      },
      "metadata": {},
@@ -408,8 +273,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 18.7 s, sys: 755 ms, total: 19.4 s\n",
-      "Wall time: 11min 10s\n"
+      "CPU times: user 3.56 s, sys: 123 ms, total: 3.68 s\n",
+      "Wall time: 1min 22s\n"
      ]
     }
    ],
@@ -464,7 +329,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Пн 08 июл 2024 14:11:39 MSK\r\n"
+      "Вт 16 июл 2024 12:55:43 MSK\r\n"
      ]
     }
    ],
@@ -474,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "9bb57abb",
    "metadata": {},
    "outputs": [],
