--- a/02-cian-downloader.ipynb
+++ b/02-cian-downloader.ipynb
@@ -182,8 +182,233 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2024-07-16 12:54:23 | open virtual browser\n"
+      "[WARNING ] 2024-08-12 10:58:16 | The geckodriver version (0.34.0) detected in PATH at /usr/bin/geckodriver might not be compatible with the detected firefox version (128.0.3); currently, geckodriver 0.35.0 is recommended for firefox 128.*, so it is advised to delete the driver in PATH and retry\n",
+      "[INFO    ] 2024-08-12 10:58:17 | open virtual browser\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'https://sevastopol.cian.ru/kupit-kvartiru/'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO    ] 2024-08-12 10:58:29 | page 1: 28 items\n",
+      "[INFO    ] 2024-08-12 10:58:38 | page 2: 28 items\n",
+      "[INFO    ] 2024-08-12 10:58:46 | page 3: 28 items\n",
+      "[INFO    ] 2024-08-12 10:58:53 | page 4: 28 items\n",
+      "[INFO    ] 2024-08-12 10:58:59 | page 5: 28 items\n",
+      "[INFO    ] 2024-08-12 10:59:06 | page 6: 28 items\n",
+      "[INFO    ] 2024-08-12 10:59:12 | page 7: 28 items\n",
+      "[INFO    ] 2024-08-12 10:59:22 | page 8: 28 items\n",
+      "[INFO    ] 2024-08-12 10:59:31 | page 9: 28 items\n",
+      "[INFO    ] 2024-08-12 10:59:39 | page 10: 28 items\n",
+      "[INFO    ] 2024-08-12 10:59:46 | page 11: 28 items\n",
+      "[INFO    ] 2024-08-12 10:59:52 | page 12: 28 items\n",
+      "[INFO    ] 2024-08-12 10:59:57 | page 13: 28 items\n",
+      "[INFO    ] 2024-08-12 11:00:02 | page 14: 28 items\n",
+      "[INFO    ] 2024-08-12 11:00:08 | page 15: 28 items\n",
+      "[INFO    ] 2024-08-12 11:00:12 | page 16: 28 items\n",
+      "[INFO    ] 2024-08-12 11:00:16 | page 17: 28 items\n",
+      "[INFO    ] 2024-08-12 11:00:24 | page 18: 28 items\n",
+      "[INFO    ] 2024-08-12 11:00:30 | page 19: 28 items\n",
+      "[INFO    ] 2024-08-12 11:00:37 | page 20: 28 items\n",
+      "[INFO    ] 2024-08-12 11:00:42 | page 21: 28 items\n",
+      "[INFO    ] 2024-08-12 11:00:47 | page 22: 28 items\n",
+      "[INFO    ] 2024-08-12 11:00:52 | page 23: 28 items\n",
+      "[INFO    ] 2024-08-12 11:00:59 | page 24: 28 items\n",
+      "[INFO    ] 2024-08-12 11:01:06 | page 25: 28 items\n",
+      "[INFO    ] 2024-08-12 11:01:13 | page 26: 28 items\n",
+      "[INFO    ] 2024-08-12 11:01:25 | page 27: 28 items\n",
+      "[INFO    ] 2024-08-12 11:01:31 | page 28: 28 items\n",
+      "[INFO    ] 2024-08-12 11:01:35 | page 29: 28 items\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "812"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'data/2024/raw/flat/cian/cian_2024-08-12_11-06_raw_sevastopol.pkl'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'https://sevastopol.cian.ru/kupit-zemelniy-uchastok/'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO    ] 2024-08-12 11:06:45 | page 1: 28 items\n",
+      "[INFO    ] 2024-08-12 11:06:59 | page 2: 28 items\n",
+      "[INFO    ] 2024-08-12 11:07:05 | page 3: 28 items\n",
+      "[INFO    ] 2024-08-12 11:07:10 | page 4: 28 items\n",
+      "[INFO    ] 2024-08-12 11:07:16 | page 5: 28 items\n",
+      "[INFO    ] 2024-08-12 11:07:22 | page 6: 28 items\n",
+      "[INFO    ] 2024-08-12 11:07:27 | page 7: 28 items\n",
+      "[INFO    ] 2024-08-12 11:07:31 | page 8: 28 items\n",
+      "[INFO    ] 2024-08-12 11:07:36 | page 9: 28 items\n",
+      "[INFO    ] 2024-08-12 11:07:41 | page 10: 28 items\n",
+      "[INFO    ] 2024-08-12 11:07:47 | page 11: 28 items\n",
+      "[INFO    ] 2024-08-12 11:07:52 | page 12: 28 items\n",
+      "[INFO    ] 2024-08-12 11:07:57 | page 13: 28 items\n",
+      "[INFO    ] 2024-08-12 11:08:01 | page 14: 28 items\n",
+      "[INFO    ] 2024-08-12 11:08:06 | page 15: 25 items\n",
+      "[INFO    ] 2024-08-12 11:08:10 | page 16: 28 items\n",
+      "[INFO    ] 2024-08-12 11:08:13 | page 17: 28 items\n",
+      "[INFO    ] 2024-08-12 11:08:18 | page 18: 28 items\n",
+      "[INFO    ] 2024-08-12 11:08:22 | page 19: 28 items\n",
+      "[INFO    ] 2024-08-12 11:08:25 | page 20: 28 items\n",
+      "[INFO    ] 2024-08-12 11:08:30 | page 21: 28 items\n",
+      "[INFO    ] 2024-08-12 11:08:34 | page 22: 28 items\n",
+      "[INFO    ] 2024-08-12 11:08:38 | page 23: 28 items\n",
+      "[INFO    ] 2024-08-12 11:08:43 | page 24: 28 items\n",
+      "[INFO    ] 2024-08-12 11:08:46 | page 25: 28 items\n",
+      "[INFO    ] 2024-08-12 11:08:50 | page 26: 28 items\n",
+      "[INFO    ] 2024-08-12 11:08:59 | page 27: 28 items\n",
+      "[INFO    ] 2024-08-12 11:09:05 | page 28: 28 items\n",
+      "[INFO    ] 2024-08-12 11:09:09 | page 29: 28 items\n",
+      "[INFO    ] 2024-08-12 11:09:15 | page 30: 28 items\n",
+      "[INFO    ] 2024-08-12 11:09:20 | page 31: 28 items\n",
+      "[INFO    ] 2024-08-12 11:09:24 | page 32: 28 items\n",
+      "[INFO    ] 2024-08-12 11:09:28 | page 33: 28 items\n",
+      "[INFO    ] 2024-08-12 11:09:33 | page 34: 28 items\n",
+      "[INFO    ] 2024-08-12 11:09:36 | page 35: 28 items\n",
+      "[INFO    ] 2024-08-12 11:09:41 | page 36: 28 items\n",
+      "[INFO    ] 2024-08-12 11:09:46 | page 37: 28 items\n",
+      "[INFO    ] 2024-08-12 11:09:49 | page 38: 28 items\n",
+      "[INFO    ] 2024-08-12 11:09:58 | page 39: 28 items\n",
+      "[INFO    ] 2024-08-12 11:10:05 | page 40: 28 items\n",
+      "[INFO    ] 2024-08-12 11:10:13 | page 41: 28 items\n",
+      "[INFO    ] 2024-08-12 11:10:19 | page 42: 28 items\n",
+      "[INFO    ] 2024-08-12 11:10:25 | page 43: 28 items\n",
+      "[INFO    ] 2024-08-12 11:10:28 | page 44: 28 items\n",
+      "[INFO    ] 2024-08-12 11:10:32 | page 45: 28 items\n",
+      "[INFO    ] 2024-08-12 11:10:36 | page 46: 28 items\n",
+      "[INFO    ] 2024-08-12 11:10:40 | page 47: 28 items\n",
+      "[INFO    ] 2024-08-12 11:10:44 | page 48: 28 items\n",
+      "[INFO    ] 2024-08-12 11:10:48 | page 49: 28 items\n",
+      "[INFO    ] 2024-08-12 11:10:53 | page 50: 28 items\n",
+      "[INFO    ] 2024-08-12 11:10:57 | page 51: 28 items\n",
+      "[INFO    ] 2024-08-12 11:10:58 | page 52: 0 items\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1425"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'data/2024/raw/land/cian/cian_2024-08-12_11-10_raw_sevastopol.pkl'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'https://sevastopol.cian.ru/kupit-dom/'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO    ] 2024-08-12 11:11:06 | page 1: 28 items\n",
+      "[INFO    ] 2024-08-12 11:11:20 | page 2: 28 items\n",
+      "[INFO    ] 2024-08-12 11:11:28 | page 3: 28 items\n",
+      "[INFO    ] 2024-08-12 11:11:36 | page 4: 28 items\n",
+      "[INFO    ] 2024-08-12 11:11:44 | page 5: 28 items\n",
+      "[INFO    ] 2024-08-12 11:11:52 | page 6: 28 items\n",
+      "[INFO    ] 2024-08-12 11:11:56 | page 7: 28 items\n",
+      "[INFO    ] 2024-08-12 11:11:56 | page 8: 0 items\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "196"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'data/2024/raw/house/cian/cian_2024-08-12_11-11_raw_sevastopol.pkl'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'https://krym.cian.ru/kupit-kvartiru-krym-sudak/'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO    ] 2024-08-12 11:12:01 | page 1: 28 items\n",
+      "[INFO    ] 2024-08-12 11:12:09 | page 2: 28 items\n",
+      "[INFO    ] 2024-08-12 11:12:09 | page 3: 0 items\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "56"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'data/2024/raw/flat/cian/cian_2024-08-12_11-12_raw_sudak.pkl'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -198,19 +423,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2024-07-16 12:54:29 | page 1: 28 items\n",
-      "[INFO    ] 2024-07-16 12:54:33 | page 2: 28 items\n",
-      "[INFO    ] 2024-07-16 12:54:37 | page 3: 28 items\n",
-      "[INFO    ] 2024-07-16 12:54:41 | page 4: 28 items\n",
-      "[INFO    ] 2024-07-16 12:54:45 | page 5: 28 items\n",
-      "[INFO    ] 2024-07-16 12:54:49 | page 6: 28 items\n",
-      "[INFO    ] 2024-07-16 12:54:50 | page 7: 0 items\n"
+      "[INFO    ] 2024-08-12 11:12:15 | page 1: 28 items\n",
+      "[INFO    ] 2024-08-12 11:12:20 | page 2: 28 items\n",
+      "[INFO    ] 2024-08-12 11:12:26 | page 3: 28 items\n",
+      "[INFO    ] 2024-08-12 11:12:26 | page 4: 0 items\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "168"
+       "84"
       ]
      },
      "metadata": {},
@@ -219,7 +441,7 @@
     {
      "data": {
       "text/plain": [
-       "'data/2024/raw/land/cian/cian_2024-07-16_12-54_raw_sudak.pkl'"
+       "'data/2024/raw/land/cian/cian_2024-08-12_11-12_raw_sudak.pkl'"
       ]
      },
      "metadata": {},
@@ -238,23 +460,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2024-07-16 12:54:55 | page 1: 28 items\n",
-      "[INFO    ] 2024-07-16 12:54:59 | page 2: 28 items\n",
-      "[INFO    ] 2024-07-16 12:55:03 | page 3: 28 items\n",
-      "[INFO    ] 2024-07-16 12:55:09 | page 4: 28 items\n",
-      "[INFO    ] 2024-07-16 12:55:15 | page 5: 28 items\n",
-      "[INFO    ] 2024-07-16 12:55:21 | page 6: 28 items\n",
-      "[INFO    ] 2024-07-16 12:55:25 | page 7: 28 items\n",
-      "[INFO    ] 2024-07-16 12:55:29 | page 8: 28 items\n",
-      "[INFO    ] 2024-07-16 12:55:34 | page 9: 28 items\n",
-      "[INFO    ] 2024-07-16 12:55:38 | page 10: 28 items\n",
-      "[INFO    ] 2024-07-16 12:55:43 | page 11: 25 items\n"
+      "[INFO    ] 2024-08-12 11:12:33 | page 1: 28 items\n",
+      "[INFO    ] 2024-08-12 11:12:38 | page 2: 28 items\n",
+      "[INFO    ] 2024-08-12 11:12:38 | page 3: 0 items\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "305"
+       "56"
       ]
      },
      "metadata": {},
@@ -263,7 +477,7 @@
     {
      "data": {
       "text/plain": [
-       "'data/2024/raw/house/cian/cian_2024-07-16_12-55_raw_sudak.pkl'"
+       "'data/2024/raw/house/cian/cian_2024-08-12_11-12_raw_sudak.pkl'"
       ]
      },
      "metadata": {},
@@ -273,8 +487,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.56 s, sys: 123 ms, total: 3.68 s\n",
-      "Wall time: 1min 22s\n"
+      "CPU times: user 21.7 s, sys: 908 ms, total: 22.6 s\n",
+      "Wall time: 14min 22s\n"
      ]
     }
    ],
@@ -329,7 +543,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Вт 16 июл 2024 12:55:43 MSK\r\n"
+      "Пн 12 авг 2024 11:12:38 MSK\r\n"
      ]
     }
    ],
@@ -364,7 +578,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
