--- a/02-cian-downloader.ipynb
+++ b/02-cian-downloader.ipynb
@@ -182,8 +182,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[WARNING ] 2024-08-12 10:58:16 | The geckodriver version (0.34.0) detected in PATH at /usr/bin/geckodriver might not be compatible with the detected firefox version (128.0.3); currently, geckodriver 0.35.0 is recommended for firefox 128.*, so it is advised to delete the driver in PATH and retry\n",
-      "[INFO    ] 2024-08-12 10:58:17 | open virtual browser\n"
+      "[WARNING ] 2024-09-09 12:31:34 | The geckodriver version (0.34.0) detected in PATH at /usr/bin/geckodriver might not be compatible with the detected firefox version (129.0.1); currently, geckodriver 0.35.0 is recommended for firefox 129.*, so it is advised to delete the driver in PATH and retry\n",
+      "[INFO    ] 2024-09-09 12:31:35 | open virtual browser\n"
      ]
     },
     {
@@ -199,41 +199,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2024-08-12 10:58:29 | page 1: 28 items\n",
-      "[INFO    ] 2024-08-12 10:58:38 | page 2: 28 items\n",
-      "[INFO    ] 2024-08-12 10:58:46 | page 3: 28 items\n",
-      "[INFO    ] 2024-08-12 10:58:53 | page 4: 28 items\n",
-      "[INFO    ] 2024-08-12 10:58:59 | page 5: 28 items\n",
-      "[INFO    ] 2024-08-12 10:59:06 | page 6: 28 items\n",
-      "[INFO    ] 2024-08-12 10:59:12 | page 7: 28 items\n",
-      "[INFO    ] 2024-08-12 10:59:22 | page 8: 28 items\n",
-      "[INFO    ] 2024-08-12 10:59:31 | page 9: 28 items\n",
-      "[INFO    ] 2024-08-12 10:59:39 | page 10: 28 items\n",
-      "[INFO    ] 2024-08-12 10:59:46 | page 11: 28 items\n",
-      "[INFO    ] 2024-08-12 10:59:52 | page 12: 28 items\n",
-      "[INFO    ] 2024-08-12 10:59:57 | page 13: 28 items\n",
-      "[INFO    ] 2024-08-12 11:00:02 | page 14: 28 items\n",
-      "[INFO    ] 2024-08-12 11:00:08 | page 15: 28 items\n",
-      "[INFO    ] 2024-08-12 11:00:12 | page 16: 28 items\n",
-      "[INFO    ] 2024-08-12 11:00:16 | page 17: 28 items\n",
-      "[INFO    ] 2024-08-12 11:00:24 | page 18: 28 items\n",
-      "[INFO    ] 2024-08-12 11:00:30 | page 19: 28 items\n",
-      "[INFO    ] 2024-08-12 11:00:37 | page 20: 28 items\n",
-      "[INFO    ] 2024-08-12 11:00:42 | page 21: 28 items\n",
-      "[INFO    ] 2024-08-12 11:00:47 | page 22: 28 items\n",
-      "[INFO    ] 2024-08-12 11:00:52 | page 23: 28 items\n",
-      "[INFO    ] 2024-08-12 11:00:59 | page 24: 28 items\n",
-      "[INFO    ] 2024-08-12 11:01:06 | page 25: 28 items\n",
-      "[INFO    ] 2024-08-12 11:01:13 | page 26: 28 items\n",
-      "[INFO    ] 2024-08-12 11:01:25 | page 27: 28 items\n",
-      "[INFO    ] 2024-08-12 11:01:31 | page 28: 28 items\n",
-      "[INFO    ] 2024-08-12 11:01:35 | page 29: 28 items\n"
+      "[INFO    ] 2024-09-09 12:31:48 | page 1: 28 items\n",
+      "[INFO    ] 2024-09-09 12:31:56 | page 2: 28 items\n",
+      "[INFO    ] 2024-09-09 12:32:02 | page 3: 28 items\n",
+      "[INFO    ] 2024-09-09 12:32:09 | page 4: 28 items\n",
+      "[INFO    ] 2024-09-09 12:32:15 | page 5: 28 items\n",
+      "[INFO    ] 2024-09-09 12:32:23 | page 6: 28 items\n",
+      "[INFO    ] 2024-09-09 12:32:29 | page 7: 28 items\n",
+      "[INFO    ] 2024-09-09 12:32:34 | page 8: 28 items\n",
+      "[INFO    ] 2024-09-09 12:32:40 | page 9: 28 items\n",
+      "[INFO    ] 2024-09-09 12:32:46 | page 10: 28 items\n",
+      "[INFO    ] 2024-09-09 12:32:56 | page 11: 28 items\n",
+      "[INFO    ] 2024-09-09 12:33:05 | page 12: 28 items\n",
+      "[INFO    ] 2024-09-09 12:33:13 | page 13: 28 items\n",
+      "[INFO    ] 2024-09-09 12:33:22 | page 14: 28 items\n",
+      "[INFO    ] 2024-09-09 12:33:33 | page 15: 28 items\n",
+      "[INFO    ] 2024-09-09 12:33:39 | page 16: 28 items\n",
+      "[INFO    ] 2024-09-09 12:33:46 | page 17: 28 items\n",
+      "[INFO    ] 2024-09-09 12:33:52 | page 18: 28 items\n",
+      "[INFO    ] 2024-09-09 12:33:59 | page 19: 28 items\n",
+      "[INFO    ] 2024-09-09 12:34:07 | page 20: 28 items\n",
+      "[INFO    ] 2024-09-09 12:34:13 | page 21: 28 items\n",
+      "[INFO    ] 2024-09-09 12:34:18 | page 22: 28 items\n",
+      "[INFO    ] 2024-09-09 12:34:45 | page 23: 28 items\n",
+      "[INFO    ] 2024-09-09 12:34:52 | page 24: 28 items\n",
+      "[INFO    ] 2024-09-09 12:34:59 | page 25: 28 items\n",
+      "[INFO    ] 2024-09-09 12:35:05 | page 26: 28 items\n",
+      "[INFO    ] 2024-09-09 12:35:17 | page 27: 28 items\n",
+      "[INFO    ] 2024-09-09 12:35:23 | page 28: 28 items\n",
+      "[INFO    ] 2024-09-09 12:35:31 | page 29: 28 items\n",
+      "[INFO    ] 2024-09-09 12:35:38 | page 30: 28 items\n",
+      "[INFO    ] 2024-09-09 12:35:45 | page 31: 28 items\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "812"
+       "868"
       ]
      },
      "metadata": {},
@@ -242,7 +244,7 @@
     {
      "data": {
       "text/plain": [
-       "'data/2024/raw/flat/cian/cian_2024-08-12_11-06_raw_sevastopol.pkl'"
+       "'data/2024/raw/flat/cian/cian_2024-09-09_12-40_raw_sevastopol.pkl'"
       ]
      },
      "metadata": {},
@@ -261,64 +263,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2024-08-12 11:06:45 | page 1: 28 items\n",
-      "[INFO    ] 2024-08-12 11:06:59 | page 2: 28 items\n",
-      "[INFO    ] 2024-08-12 11:07:05 | page 3: 28 items\n",
-      "[INFO    ] 2024-08-12 11:07:10 | page 4: 28 items\n",
-      "[INFO    ] 2024-08-12 11:07:16 | page 5: 28 items\n",
-      "[INFO    ] 2024-08-12 11:07:22 | page 6: 28 items\n",
-      "[INFO    ] 2024-08-12 11:07:27 | page 7: 28 items\n",
-      "[INFO    ] 2024-08-12 11:07:31 | page 8: 28 items\n",
-      "[INFO    ] 2024-08-12 11:07:36 | page 9: 28 items\n",
-      "[INFO    ] 2024-08-12 11:07:41 | page 10: 28 items\n",
-      "[INFO    ] 2024-08-12 11:07:47 | page 11: 28 items\n",
-      "[INFO    ] 2024-08-12 11:07:52 | page 12: 28 items\n",
-      "[INFO    ] 2024-08-12 11:07:57 | page 13: 28 items\n",
-      "[INFO    ] 2024-08-12 11:08:01 | page 14: 28 items\n",
-      "[INFO    ] 2024-08-12 11:08:06 | page 15: 25 items\n",
-      "[INFO    ] 2024-08-12 11:08:10 | page 16: 28 items\n",
-      "[INFO    ] 2024-08-12 11:08:13 | page 17: 28 items\n",
-      "[INFO    ] 2024-08-12 11:08:18 | page 18: 28 items\n",
-      "[INFO    ] 2024-08-12 11:08:22 | page 19: 28 items\n",
-      "[INFO    ] 2024-08-12 11:08:25 | page 20: 28 items\n",
-      "[INFO    ] 2024-08-12 11:08:30 | page 21: 28 items\n",
-      "[INFO    ] 2024-08-12 11:08:34 | page 22: 28 items\n",
-      "[INFO    ] 2024-08-12 11:08:38 | page 23: 28 items\n",
-      "[INFO    ] 2024-08-12 11:08:43 | page 24: 28 items\n",
-      "[INFO    ] 2024-08-12 11:08:46 | page 25: 28 items\n",
-      "[INFO    ] 2024-08-12 11:08:50 | page 26: 28 items\n",
-      "[INFO    ] 2024-08-12 11:08:59 | page 27: 28 items\n",
-      "[INFO    ] 2024-08-12 11:09:05 | page 28: 28 items\n",
-      "[INFO    ] 2024-08-12 11:09:09 | page 29: 28 items\n",
-      "[INFO    ] 2024-08-12 11:09:15 | page 30: 28 items\n",
-      "[INFO    ] 2024-08-12 11:09:20 | page 31: 28 items\n",
-      "[INFO    ] 2024-08-12 11:09:24 | page 32: 28 items\n",
-      "[INFO    ] 2024-08-12 11:09:28 | page 33: 28 items\n",
-      "[INFO    ] 2024-08-12 11:09:33 | page 34: 28 items\n",
-      "[INFO    ] 2024-08-12 11:09:36 | page 35: 28 items\n",
-      "[INFO    ] 2024-08-12 11:09:41 | page 36: 28 items\n",
-      "[INFO    ] 2024-08-12 11:09:46 | page 37: 28 items\n",
-      "[INFO    ] 2024-08-12 11:09:49 | page 38: 28 items\n",
-      "[INFO    ] 2024-08-12 11:09:58 | page 39: 28 items\n",
-      "[INFO    ] 2024-08-12 11:10:05 | page 40: 28 items\n",
-      "[INFO    ] 2024-08-12 11:10:13 | page 41: 28 items\n",
-      "[INFO    ] 2024-08-12 11:10:19 | page 42: 28 items\n",
-      "[INFO    ] 2024-08-12 11:10:25 | page 43: 28 items\n",
-      "[INFO    ] 2024-08-12 11:10:28 | page 44: 28 items\n",
-      "[INFO    ] 2024-08-12 11:10:32 | page 45: 28 items\n",
-      "[INFO    ] 2024-08-12 11:10:36 | page 46: 28 items\n",
-      "[INFO    ] 2024-08-12 11:10:40 | page 47: 28 items\n",
-      "[INFO    ] 2024-08-12 11:10:44 | page 48: 28 items\n",
-      "[INFO    ] 2024-08-12 11:10:48 | page 49: 28 items\n",
-      "[INFO    ] 2024-08-12 11:10:53 | page 50: 28 items\n",
-      "[INFO    ] 2024-08-12 11:10:57 | page 51: 28 items\n",
-      "[INFO    ] 2024-08-12 11:10:58 | page 52: 0 items\n"
+      "[INFO    ] 2024-09-09 12:40:54 | page 1: 28 items\n",
+      "[INFO    ] 2024-09-09 12:40:58 | page 2: 28 items\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "1425"
+       "56"
       ]
      },
      "metadata": {},
@@ -327,7 +279,7 @@
     {
      "data": {
       "text/plain": [
-       "'data/2024/raw/land/cian/cian_2024-08-12_11-10_raw_sevastopol.pkl'"
+       "'data/2024/raw/land/cian/cian_2024-09-09_12-45_raw_sevastopol.pkl'"
       ]
      },
      "metadata": {},
@@ -346,20 +298,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2024-08-12 11:11:06 | page 1: 28 items\n",
-      "[INFO    ] 2024-08-12 11:11:20 | page 2: 28 items\n",
-      "[INFO    ] 2024-08-12 11:11:28 | page 3: 28 items\n",
-      "[INFO    ] 2024-08-12 11:11:36 | page 4: 28 items\n",
-      "[INFO    ] 2024-08-12 11:11:44 | page 5: 28 items\n",
-      "[INFO    ] 2024-08-12 11:11:52 | page 6: 28 items\n",
-      "[INFO    ] 2024-08-12 11:11:56 | page 7: 28 items\n",
-      "[INFO    ] 2024-08-12 11:11:56 | page 8: 0 items\n"
+      "[INFO    ] 2024-09-09 12:46:06 | page 1: 28 items\n",
+      "[INFO    ] 2024-09-09 12:46:14 | page 2: 28 items\n",
+      "[INFO    ] 2024-09-09 12:46:21 | page 3: 28 items\n",
+      "[INFO    ] 2024-09-09 12:46:29 | page 4: 28 items\n",
+      "[INFO    ] 2024-09-09 12:46:37 | page 5: 28 items\n",
+      "[INFO    ] 2024-09-09 12:46:44 | page 6: 28 items\n",
+      "[INFO    ] 2024-09-09 12:46:54 | page 7: 28 items\n",
+      "[INFO    ] 2024-09-09 12:47:00 | page 8: 28 items\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "196"
+       "224"
       ]
      },
      "metadata": {},
@@ -368,7 +320,7 @@
     {
      "data": {
       "text/plain": [
-       "'data/2024/raw/house/cian/cian_2024-08-12_11-11_raw_sevastopol.pkl'"
+       "'data/2024/raw/house/cian/cian_2024-09-09_12-52_raw_sevastopol.pkl'"
       ]
      },
      "metadata": {},
@@ -387,15 +339,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2024-08-12 11:12:01 | page 1: 28 items\n",
-      "[INFO    ] 2024-08-12 11:12:09 | page 2: 28 items\n",
-      "[INFO    ] 2024-08-12 11:12:09 | page 3: 0 items\n"
+      "[INFO    ] 2024-09-09 12:52:10 | page 1: 28 items\n",
+      "[INFO    ] 2024-09-09 12:52:20 | page 2: 28 items\n",
+      "[INFO    ] 2024-09-09 12:52:28 | page 3: 28 items\n",
+      "[INFO    ] 2024-09-09 12:52:34 | page 4: 28 items\n",
+      "[INFO    ] 2024-09-09 12:52:43 | page 5: 28 items\n",
+      "[INFO    ] 2024-09-09 12:52:50 | page 6: 28 items\n",
+      "[INFO    ] 2024-09-09 12:52:55 | page 7: 28 items\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "56"
+       "196"
       ]
      },
      "metadata": {},
@@ -404,7 +360,7 @@
     {
      "data": {
       "text/plain": [
-       "'data/2024/raw/flat/cian/cian_2024-08-12_11-12_raw_sudak.pkl'"
+       "'data/2024/raw/flat/cian/cian_2024-09-09_12-57_raw_sudak.pkl'"
       ]
      },
      "metadata": {},
@@ -423,16 +379,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2024-08-12 11:12:15 | page 1: 28 items\n",
-      "[INFO    ] 2024-08-12 11:12:20 | page 2: 28 items\n",
-      "[INFO    ] 2024-08-12 11:12:26 | page 3: 28 items\n",
-      "[INFO    ] 2024-08-12 11:12:26 | page 4: 0 items\n"
+      "[INFO    ] 2024-09-09 12:57:59 | page 1: 28 items\n",
+      "[INFO    ] 2024-09-09 12:58:02 | page 2: 28 items\n",
+      "[INFO    ] 2024-09-09 12:58:08 | page 3: 25 items\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "84"
+       "81"
       ]
      },
      "metadata": {},
@@ -441,7 +396,7 @@
     {
      "data": {
       "text/plain": [
-       "'data/2024/raw/land/cian/cian_2024-08-12_11-12_raw_sudak.pkl'"
+       "'data/2024/raw/land/cian/cian_2024-09-09_12-58_raw_sudak.pkl'"
       ]
      },
      "metadata": {},
@@ -460,15 +415,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2024-08-12 11:12:33 | page 1: 28 items\n",
-      "[INFO    ] 2024-08-12 11:12:38 | page 2: 28 items\n",
-      "[INFO    ] 2024-08-12 11:12:38 | page 3: 0 items\n"
+      "[INFO    ] 2024-09-09 12:58:12 | page 1: 28 items\n",
+      "[INFO    ] 2024-09-09 12:58:20 | page 2: 28 items\n",
+      "[INFO    ] 2024-09-09 12:58:25 | page 3: 28 items\n",
+      "[INFO    ] 2024-09-09 12:58:30 | page 4: 28 items\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "56"
+       "112"
       ]
      },
      "metadata": {},
@@ -477,7 +433,7 @@
     {
      "data": {
       "text/plain": [
-       "'data/2024/raw/house/cian/cian_2024-08-12_11-12_raw_sudak.pkl'"
+       "'data/2024/raw/house/cian/cian_2024-09-09_12-58_raw_sudak.pkl'"
       ]
      },
      "metadata": {},
@@ -487,8 +443,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 21.7 s, sys: 908 ms, total: 22.6 s\n",
-      "Wall time: 14min 22s\n"
+      "CPU times: user 12.8 s, sys: 521 ms, total: 13.4 s\n",
+      "Wall time: 26min 56s\n"
      ]
     }
    ],
@@ -536,6 +492,16 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "222ef35c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !rm -v data/2024/raw/flat/cian/cian_2024-09-03_13-16_raw_sevastopol.pkl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "ff5bb5ec",
    "metadata": {},
    "outputs": [
@@ -543,7 +509,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Пн 12 авг 2024 11:12:38 MSK\r\n"
+      "Пн 09 сен 2024 12:58:30 MSK\r\n"
      ]
     }
    ],
@@ -553,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "9bb57abb",
    "metadata": {},
    "outputs": [],
